welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:3: error: type mismatch;
 found   : Unit
 required: String
if ((((day==0 || day==6) && (vacation==false))) || (((day<=1 && day<=5) && (vacation==true)))) return "10:00"
^