welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
if (((day<=1 && day<=5) && (vacation==false))) return "7:00"
if ((((day==0 || day==6) && (vacation==false))) || (((day<=1 && day<=5) && (vacation==true)))) return "10:00"

}